--- a/index.html
+++ b/index.html
@@ -1,107 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Kontrol Relay ESP8266</title>
-  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f4f4f4;
-    }
-    .section {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 18px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .on { background-color: #4CAF50; color: white; }
-    .off { background-color: #f44336; color: white; }
-    p.status {
-      font-size: 18px;
-      margin-top: 10px;
-    }
-  </style>
-</head>
-<body>
+<script>
+  const options = {
+    clean: true,
+    connectTimeout: 4000,
+    clientId: 'webClient_' + Math.floor(Math.random() * 1000),
+    username: 'Atalarik',
+    password: 'Atalarik21'
+  };
 
-  <h1>ATTAMATION</h1>
+  const connectUrl = 'wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt';
+  const client = mqtt.connect(connectUrl, options);
 
-  <div class="section">
-    <h2>Relay 1</h2>
-    <button id="relay1Btn" class="off" onclick="toggleRelay('relay1')">Relay 1: OFF</button>
-    <p class="status">Status (dari ESP): <span id="relay1Status">OFF</span></p>
-  </div>
+  let relayStatus = {
+    relay1: 'OFF',
+    relay2: 'OFF'
+  };
 
-  <div class="section">
-    <h2>Relay 2</h2>
-    <button id="relay2Btn" class="off" onclick="toggleRelay('relay2')">Relay 2: OFF</button>
-    <p class="status">Status (dari ESP): <span id="relay2Status">OFF</span></p>
-  </div>
+  client.on('connect', () => {
+    console.log('✅ Terhubung ke MQTT');
+    client.subscribe('esp/status/relay1');
+    client.subscribe('esp/status/relay2');
 
-  <script>
-    const options = {
-      clean: true,
-      connectTimeout: 4000,
-      clientId: 'webClient_' + Math.floor(Math.random() * 1000),
-      username: 'Atalarik',
-      password: 'Atalarik21'
-    };
+    // Minta status saat pertama connect
+    client.publish('esp/get_status', 'REQ');
+  });
 
-    const connectUrl = 'wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt';
-    const client = mqtt.connect(connectUrl, options);
+  client.on('message', (topic, message) => {
+    const msg = message.toString();
 
-    let relayStatus = {
-      relay1: 'OFF',
-      relay2: 'OFF'
-    };
-
-    client.on('connect', () => {
-      console.log('✅ Terhubung ke MQTT');
-      client.subscribe('esp/status/relay1');
-      client.subscribe('esp/status/relay2');
-    });
-
-    client.on('message', (topic, message) => {
-      const msg = message.toString();
-
-      if (topic === 'esp/status/relay1') {
-        relayStatus.relay1 = msg;
-        updateStatusOnly('relay1', msg); // hanya update status, bukan tombol
-      }
-
-      if (topic === 'esp/status/relay2') {
-        relayStatus.relay2 = msg;
-        updateStatusOnly('relay2', msg); // hanya update status, bukan tombol
-      }
-    });
-
-    function toggleRelay(relay) {
-      const currentBtn = document.getElementById(`${relay}Btn`);
-      const newState = currentBtn.classList.contains('off') ? 'ON' : 'OFF';
-      client.publish(`esp/${relay}`, newState);
-
-      // Langsung ubah tampilan tombol (optimistik)
-      currentBtn.innerText = `${relay.charAt(0).toUpperCase() + relay.slice(1)}: ${newState}`;
-      currentBtn.classList.toggle('on', newState === 'ON');
-      currentBtn.classList.toggle('off', newState === 'OFF');
+    if (topic === 'esp/status/relay1') {
+      relayStatus.relay1 = msg;
+      updateStatusOnly('relay1', msg);
     }
 
-    // Hanya update status dari feedback Arduino
-    function updateStatusOnly(relay, state) {
-      const statusSpan = document.getElementById(`${relay}Status`);
-      statusSpan.innerText = state;
+    if (topic === 'esp/status/relay2') {
+      relayStatus.relay2 = msg;
+      updateStatusOnly('relay2', msg);
     }
-  </script>
+  });
 
-</body>
-</html>
+  function toggleRelay(relay) {
+    const currentBtn = document.getElementById(`${relay}Btn`);
+    const newState = currentBtn.classList.contains('off') ? 'ON' : 'OFF';
+    client.publish(`esp/${relay}`, newState);
+    currentBtn.innerText = `${relay.charAt(0).toUpperCase() + relay.slice(1)}: ${newState}`;
+    currentBtn.classList.toggle('on', newState === 'ON');
+    currentBtn.classList.toggle('off', newState === 'OFF');
+  }
+
+  function updateStatusOnly(relay, state) {
+    const statusSpan = document.getElementById(`${relay}Status`);
+    const currentBtn = document.getElementById(`${relay}Btn`);
+    statusSpan.innerText = state;
+    currentBtn.innerText = `${relay.charAt(0).toUpperCase() + relay.slice(1)}: ${state}`;
+    currentBtn.classList.toggle('on', state === 'ON');
+    currentBtn.classList.toggle('off', state === 'OFF');
+  }
+</script>
