--- a/index.html
+++ b/index.html
@@ -2,53 +2,101 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Kontrol Relay ESP8266</title>
+  <title>ATTAMATION</title>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f4f4f4;
+      background-color: #fff;
+      text-align: center;
+      margin: 0;
+      padding: 0;
     }
 
-    .section {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-
-    button {
-      padding: 10px 20px;
+    .status-bar {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      display: flex;
+      align-items: center;
       font-size: 18px;
-      border: none;
-      border-radius: 5px;
+      color: #1c2340;
+    }
+
+    .led {
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      background-color: grey;
+      margin-right: 10px;
+      border: 1px solid #999;
+    }
+
+    h1 {
+      font-size: 36px;
+      color: #1c2340;
+      margin-top: 60px;
+      margin-bottom: 50px;
+    }
+
+    .relay-section {
+      margin: 40px auto;
+    }
+
+    .relay-label {
+      font-size: 22px;
+      color: #1c2340;
+      margin-bottom: 10px;
+    }
+
+    .relay-btn {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 2px solid #1c2340;
+      font-size: 20px;
+      background-color: white;
+      color: #1c2340;
       cursor: pointer;
+      margin: 10px;
     }
 
-    .on { background-color: #4CAF50; color: white; }
-    .off { background-color: #f44336; color: white; }
-    p.status {
+    .relay-status {
       font-size: 18px;
+      color: #1c2340;
       margin-top: 10px;
+    }
+
+    .on {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    .off {
+      background-color: white;
+      color: #1c2340;
     }
   </style>
 </head>
 <body>
 
-  <h1>ATTAMATION - Kontrol Relay ESP8266</h1>
-
-  <div class="section">
-    <h2>Relay 1</h2>
-    <button id="relay1Btn" class="off" onclick="toggleRelay('relay1')">Relay 1: OFF</button>
-    <p class="status">Status (dari ESP): <span id="relay1Status">OFF</span></p>
+  <div class="status-bar">
+    <div id="led" class="led"></div>
+    <span id="connectionStatus">Offline</span>
   </div>
 
-  <div class="section">
-    <h2>Relay 2</h2>
-    <button id="relay2Btn" class="off" onclick="toggleRelay('relay2')">Relay 2: OFF</button>
-    <p class="status">Status (dari ESP): <span id="relay2Status">OFF</span></p>
+  <h1>ATTAMATION</h1>
+
+  <div class="relay-section">
+    <div class="relay-label">Relay 1</div>
+    <button id="relay1Btn" class="relay-btn off" onclick="toggleRelay('relay1')">OFF</button>
+    <div class="relay-status">Status = <span id="relay1Status">OFF</span></div>
+  </div>
+
+  <div class="relay-section">
+    <div class="relay-label">Relay 2</div>
+    <button id="relay2Btn" class="relay-btn off" onclick="toggleRelay('relay2')">OFF</button>
+    <div class="relay-status">Status = <span id="relay2Status">OFF</span></div>
   </div>
 
   <script>
@@ -63,15 +111,33 @@
     const connectUrl = 'wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt';
     const client = mqtt.connect(connectUrl, options);
 
+    const led = document.getElementById('led');
+    const connectionStatus = document.getElementById('connectionStatus');
+
     client.on('connect', () => {
       console.log('✅ Terhubung ke MQTT');
+      led.style.backgroundColor = 'green';
+      connectionStatus.innerText = 'Online';
 
-      // Subscribe ke status dari ESP
       client.subscribe('esp/status/relay1');
       client.subscribe('esp/status/relay2');
-
-      // Minta status terkini dari ESP
       client.publish('esp/get_status', 'REQ');
+    });
+
+    client.on('reconnect', () => {
+      led.style.backgroundColor = 'orange';
+      connectionStatus.innerText = 'Menyambung...';
+    });
+
+    client.on('error', (error) => {
+      console.error('MQTT Error:', error);
+      led.style.backgroundColor = 'red';
+      connectionStatus.innerText = 'Error';
+    });
+
+    client.on('offline', () => {
+      led.style.backgroundColor = 'grey';
+      connectionStatus.innerText = 'Offline';
     });
 
     client.on('message', (topic, message) => {
@@ -88,15 +154,9 @@
 
     function toggleRelay(relay) {
       const currentBtn = document.getElementById(`${relay}Btn`);
-      const newState = currentBtn.classList.contains('off') ? 'ON' : 'OFF';
+      const newState = currentBtn.innerText === 'OFF' ? 'ON' : 'OFF';
 
-      // Kirim perintah ke ESP
       client.publish(`esp/${relay}`, newState);
-
-      // Optimistik update tombol (bisa dihilangkan kalau ingin hanya update dari ESP)
-      currentBtn.innerText = `${relay.charAt(0).toUpperCase() + relay.slice(1)}: ${newState}`;
-      currentBtn.classList.toggle('on', newState === 'ON');
-      currentBtn.classList.toggle('off', newState === 'OFF');
     }
 
     function updateRelayUI(relay, state) {
@@ -104,7 +164,7 @@
       const statusSpan = document.getElementById(`${relay}Status`);
 
       statusSpan.innerText = state;
-      btn.innerText = `${relay.charAt(0).toUpperCase() + relay.slice(1)}: ${state}`;
+      btn.innerText = state;
       btn.classList.toggle('on', state === 'ON');
       btn.classList.toggle('off', state === 'OFF');
     }
