--- a/index.html
+++ b/index.html
@@ -1,139 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>ATTAMATION</title>
+  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <style>
     body {
-      background-color: #f9f9f9;
       font-family: Arial, sans-serif;
-      color: #1a1a3d;
-      text-align: center;
+      background-color: #fefefe;
+      color: #1f2350;
       margin: 0;
-      padding: 0;
+      padding: 30px;
+      text-align: center;
     }
-    .status-container {
+
+    .status-led {
+      display: flex;
+      align-items: center;
       position: absolute;
       top: 20px;
       left: 20px;
-      display: flex;
-      align-items: center;
-      font-size: 18px;
     }
-    .status-dot {
-      height: 15px;
+
+    .led {
       width: 15px;
+      height: 15px;
       border-radius: 50%;
-      margin-right: 8px;
-      border: 1.5px solid #1a1a3d;
+      background-color: grey;
+      margin-right: 10px;
+      border: 1px solid #ccc;
     }
-    .status-dot.online {
-      background-color: green;
-    }
-    .status-dot.offline {
-      background-color: transparent;
-    }
+
     h1 {
-      margin-top: 60px;
       font-size: 32px;
-      letter-spacing: 2px;
+      margin-bottom: 40px;
+      font-weight: bold;
     }
-    .relay-section {
-      margin-top: 40px;
+
+    .relay-container {
+      margin-bottom: 50px;
     }
+
     .relay-title {
-      font-size: 22px;
+      font-size: 24px;
       margin-bottom: 15px;
     }
-    .button {
+
+    .relay-button {
+      font-size: 20px;
       width: 100px;
       height: 100px;
+      border: 2px solid #1f2350;
       border-radius: 50%;
-      border: 2px solid #1a1a3d;
-      background-color: transparent;
-      font-size: 18px;
-      font-weight: bold;
-      color: #1a1a3d;
+      background-color: white;
+      color: #1f2350;
       cursor: pointer;
-      transition: all 0.3s ease;
+      margin-bottom: 10px;
     }
-    .button.on {
-      background-color: #2ecc71;
+
+    .relay-button.on {
+      background-color: #4CAF50;
       color: white;
-      border: none;
     }
-    .status-label {
-      margin-top: 10px;
-      font-size: 16px;
+
+    .status-text {
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
-  <div class="status-container">
-    <div id="statusDot" class="status-dot offline"></div>
-    <span id="statusText">Offline</span>
+
+  <div class="status-led">
+    <div class="led" id="led"></div>
+    <div id="connectionStatus">Offline</div>
   </div>
 
   <h1>ATTAMATION</h1>
 
-  <div class="relay-section">
+  <div class="relay-container">
     <div class="relay-title">Relay 1</div>
-    <button id="relay1Button" class="button" onclick="toggleRelay(1)">OFF</button>
-    <div class="status-label">Status = <span id="relay1Status">OFF</span></div>
+    <button id="relay1Btn" class="relay-button off" onclick="toggleRelay('relay1')">OFF</button>
+    <div class="status-text">Status = <span id="relay1Status">OFF</span></div>
   </div>
 
-  <div class="relay-section">
+  <div class="relay-container">
     <div class="relay-title">Relay 2</div>
-    <button id="relay2Button" class="button" onclick="toggleRelay(2)">OFF</button>
-    <div class="status-label">Status = <span id="relay2Status">OFF</span></div>
+    <button id="relay2Btn" class="relay-button off" onclick="toggleRelay('relay2')">OFF</button>
+    <div class="status-text">Status = <span id="relay2Status">OFF</span></div>
   </div>
 
   <script>
-    // Contoh MQTT dan status updater (harus disesuaikan sesuai implementasimu)
-    let connected = false;
+    window.onload = () => {
+      const options = {
+        clean: true,
+        connectTimeout: 4000,
+        clientId: 'webClient_' + Math.floor(Math.random() * 1000),
+        username: 'Atalarik',
+        password: 'Atalarik21'
+      };
 
-    function updateConnectionStatus(isConnected) {
-      const dot = document.getElementById("statusDot");
-      const text = document.getElementById("statusText");
-      if (isConnected) {
-        dot.classList.add("online");
-        dot.classList.remove("offline");
-        text.textContent = "Online";
-      } else {
-        dot.classList.remove("online");
-        dot.classList.add("offline");
-        text.textContent = "Offline";
+      const connectUrl = 'wss://3c745a388bec4b4fa3def162b723c4a4.s1.eu.hivemq.cloud:8884/mqtt';
+      const client = mqtt.connect(connectUrl, options);
+
+      const led = document.getElementById('led');
+      const connectionStatus = document.getElementById('connectionStatus');
+
+      client.on('connect', () => {
+        console.log('✅ Terhubung ke MQTT');
+        led.style.backgroundColor = 'green';
+        connectionStatus.innerText = 'Online';
+
+        client.subscribe('esp/status/relay1');
+        client.subscribe('esp/status/relay2');
+        client.publish('esp/get_status', 'REQ');
+      });
+
+      client.on('reconnect', () => {
+        led.style.backgroundColor = 'orange';
+        connectionStatus.innerText = 'Menyambung...';
+      });
+
+      client.on('error', (error) => {
+        console.error('MQTT Error:', error);
+        led.style.backgroundColor = 'red';
+        connectionStatus.innerText = 'Error';
+      });
+
+      client.on('offline', () => {
+        led.style.backgroundColor = 'grey';
+        connectionStatus.innerText = 'Offline';
+      });
+
+      client.on('message', (topic, message) => {
+        const msg = message.toString();
+
+        if (topic === 'esp/status/relay1') {
+          updateRelayStatusUI('relay1', msg);
+        }
+
+        if (topic === 'esp/status/relay2') {
+          updateRelayStatusUI('relay2', msg);
+        }
+      });
+
+      window.toggleRelay = function (relay) {
+        const btn = document.getElementById(`${relay}Btn`);
+        const newState = btn.innerText === 'OFF' ? 'ON' : 'OFF';
+
+        // Optimistic update tampilan tombol
+        btn.innerText = newState;
+        btn.classList.toggle('on', newState === 'ON');
+        btn.classList.toggle('off', newState === 'OFF');
+
+        // Kirim perintah ke ESP
+        client.publish(`esp/${relay}`, newState);
       }
-    }
 
-    function toggleRelay(relayNum) {
-      const btn = document.getElementById(`relay${relayNum}Button`);
-      const status = document.getElementById(`relay${relayNum}Status`);
-      const currentState = btn.textContent;
-      const newState = currentState === "ON" ? "OFF" : "ON";
-
-      // Ubah tampilan tombol langsung
-      btn.textContent = newState;
-      btn.classList.toggle("on", newState === "ON");
-
-      // Status relay menunggu feedback dari ESP
-      // Kirim ke MQTT topic
-      if (connected) {
-        const topic = `esp/relay${relayNum}`;
-        client.publish(topic, newState);
+      function updateRelayStatusUI(relay, state) {
+        const statusSpan = document.getElementById(`${relay}Status`);
+        statusSpan.innerText = state;
       }
-    }
-
-    // Fungsi update status relay dari feedback MQTT
-    function updateRelayStatus(relayNum, state) {
-      const btn = document.getElementById(`relay${relayNum}Button`);
-      const status = document.getElementById(`relay${relayNum}Status`);
-      status.textContent = state;
-      btn.classList.toggle("on", state === "ON");
-    }
-
-    // Simulasi awal
-    updateConnectionStatus(false);
+    };
   </script>
 </body>
 </html>
